vlib/v/checker/tests/struct_aliased_field_unsign_type_check_err.vv
type Port = u16

struct App {
	port Port
}

fn main() {
	app := App{
		port: -1
	}
	println(app)
}
